--- a/trunk/public/themes/blue/header.html
+++ b/trunk/public/themes/blue/header.html
@@ -45,6 +45,9 @@
 </script>
 <link rel="stylesheet" id='skin' type="text/css" href="__PUBLIC__/js/tip/jquery.cluetip.css" />
 
+<link href="public.css" rel="stylesheet" type="text/css" />
+<link href="layout.css" rel="stylesheet" type="text/css" />
+
 </head>
 <body>
 <script>
@@ -58,7 +61,7 @@
 	<session name="userInfo">
 		<div class="nav">
 			<ul>
-			<li><a href="__TS__/Home" class="fb14">首页</a></li>
+			<li style="left: 55px"><a href="__TS__/Home" class="fb14">首页</a></li>
 		   <!--  <li class="on"> -->
 		   <li><a href="__TS__/space/{$mid}" class="fb14">个人空间</a>
 				<!-- <div class="dropmenu"><a href="#">修改资料</a><a href="#">换头像</a><a href="#">我的留言板</a></div> --></li>
