--- a/trunk/public/themes/blue/footer.html
+++ b/trunk/public/themes/blue/footer.html
@@ -1,3 +1,10 @@
+
+<head>
+<meta content="text/html; charset=utf-8" http-equiv="Content-Type">
+<link href="public.css" rel="stylesheet" type="text/css">
+<link href="layout.css" rel="stylesheet" type="text/css">
+</head>
+
 <php>if($mid && !$is_im_closed && $site_opts["is_im_open"]){</php>
 	<include file="__THEME__/im" />
 <php>}</php>
