--- a/trunk/thinksns/Tpl/default/Index/index.html
+++ b/trunk/thinksns/Tpl/default/Index/index.html
@@ -19,10 +19,12 @@
 <!--
 .index_info { margin-right: auto; margin-left: auto;text-align: left; background-image: url(../Public/images/index_bg.jpg); background-repeat: repeat-x; background-position: 0px 0px; height: 388px; overflow: hidden; background-color: #FFF; }
 .index_info .info {
+text-align:center;
 	font-size: 12px;
-	color: #346996;
+	color: #309ACC;
 	line-height: 20px;
-	width: 430px;
+	width: 270px;
+	height:388px;
 	float: right;
 	margin-right: 10px;
 	padding-top: 30px;
@@ -48,10 +50,12 @@
 .index_info .info h1{
 	font-weight: bold;
 	font-size: 30px;
+	line-height:50px;
+	margin:5px auto;
 	font-family: Arial, Helvetica, sans-serif;
 }
-.index_info .info p{
-	text-indent: 2em;
+.index_info .info .alC{
+margin-top:20px;
 }
 .index_info .product_pic {
 	float: left;
@@ -70,6 +74,15 @@
 <div class="main" style="padding-bottom:0px;"> <!-- 右侧内容 begin  -->
 <div class="index_info">
 <div class="product_pic"><img src="../Public/images/product.jpg" height="388" /></div>
+<div class="info">
+<h1></h1>
+<h1>凝聚华人力量</h1>
+<h1>打造真实社交</h1>
+
+<div class="alC"><a href="__URL__/reg"><img src="../Public/images/btn_zc.gif" alt="立即注册" width="172" height="61" border="0" /></a></div>
+
+</div>
+
 </div>
 </div>
 
