--- a/trunk/thinksns/Tpl/default/Index/login.html
+++ b/trunk/thinksns/Tpl/default/Index/login.html
@@ -1,3 +1,8 @@
+
+<head>
+<meta content="text/html; charset=utf-8" http-equiv="Content-Type">
+</head>
+
 <include file="__THEME__/header" />
 <script>
     function changeverify(){
@@ -19,7 +24,7 @@
 
 
     <div class="LoginBox border bg01">
-        <h1 class="cBlue">登录ThinkSNS</h1>
+        <h1 class="cBlue">登录XUEYOU</h1>
         <form action="__URL__/doLogin" method="post">
             <ul>
                 <li>
@@ -62,7 +67,7 @@
             </ul>
         </form>
 </div> 
-<div class="LoginBox_btm">还没有开通你的ThinkSNS帐号？ <br /><a href="__URL__/reg" class="U f14px">立刻加入</a></div>
+<div class="LoginBox_btm">还没有开通你的XUEYOU帐号？ <br /><a href="__URL__/reg" class="U f14px">立刻加入</a></div>
    
 
 
