--- a/trunk/thinksns/Tpl/default/Info/education.html
+++ b/trunk/thinksns/Tpl/default/Info/education.html
@@ -1,4 +1,8 @@
+
+<head>
 <include file="__THEME__/header" />
+
+<meta content="text/html; charset=utf-8" http-equiv="Content-Type">
 
 <link href="../Public/basic.css" rel="stylesheet" type="text/css" />
 <script>
@@ -24,6 +28,8 @@
             }});
     }
 </script>
+
+</head>
 
 <div class="content"><!-- 内容 begin  -->
 
