--- a/trunk/thinksns/Tpl/default/Index/index.html
+++ b/trunk/thinksns/Tpl/default/Index/index.html
@@ -76,8 +76,8 @@ margin-top:20px;
 <div class="product_pic"><img src="../Public/images/product.jpg" height="388" /></div>
 <div class="info">
 <h1></h1>
-<h1>凝聚华人力量</h1>
-<h1>打造真实社交</h1>
+<h1>内测中...</h1>
+<h1></h1>
 
 <div class="alC"><a href="__URL__/reg"><img src="../Public/images/btn_zc.gif" alt="立即注册" width="172" height="61" border="0" /></a></div>
 
