--- a/trunk/public/themes/blue/footer.html
+++ b/trunk/public/themes/blue/footer.html
@@ -18,8 +18,7 @@
 <div class="footer">
 	<div class="menu">
 		<a href="__TS__/Information/index/cid/2">关于我们</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="__TS__/Information/index/cid/3">联系方式</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="__TS__/Information/index/flink/1">友情链接</a></div>
-  Copyright © ThinkSNS {$site_opts.icp} <a href="http://www.thinksns.com" target="_blank">Powered by <strong style="color:#555; font-family:Verdana, Arial, Helvetica, sans-serif;">Th<span style="color:#00CC00;">i</span>nk<span style="color:#0066FF;">SNS</span>™</strong></a>
-</div>
+  Copyright © XUEYOU {$site_opts.icp} </div>
 <div style="height:30px;" >&nbsp;</div>
 </div>
 <php>if($ad["footer"]){</php>
