--- a/public/themes/xueyou01/header.html
+++ b/public/themes/xueyou01/header.html
@@ -47,7 +47,7 @@
 
 </head>
 <body>
-<div id="clock" style="float:right; margin-right:0px; position:absolute;" >
+<div id="clock" style="top:2px;position:fixed;right:5px;position:fixed;z-index:20;" >
 <script src="http://www.clocklink.com/embed.js"></script><script type="text/javascript" language="JavaScript">obj=new Object;obj.clockfile="0050-purple.swf";obj.TimeZone="China_Beijing";obj.width=150;obj.height=150;obj.wmode="transparent";showClock(obj);</script>
 </div>
 <script>
