--- a/trunk/public/themes/xueyou01/header.html
+++ b/trunk/public/themes/xueyou01/header.html
@@ -47,8 +47,18 @@
 
 </head>
 <body>
-<div id="clock" style="top:2px;position:fixed;right:5px;position:fixed;z-index:20;" >
-<script src="http://www.clocklink.com/embed.js"></script><script type="text/javascript" language="JavaScript">obj=new Object;obj.clockfile="0050-purple.swf";obj.TimeZone="China_Beijing";obj.width=150;obj.height=150;obj.wmode="transparent";showClock(obj);</script>
+<div id="clockroom" style="width:130px;top:2px;position:fixed;right:5px;position: absolute;z-index:20; text-align:center;" >
+<div id="clock1" style="width:130px;height:130px;display:block;">
+<script src="http://www.clocklink.com/embed.js"></script><script type="text/javascript" language="JavaScript">obj=new Object;obj.clockfile="0023-orange.swf";obj.TimeZone="CCT";obj.width=130;obj.height=130;obj.wmode="transparent";showClock(obj);</script>
+</div>
+<div style="width:130px; height:20px; font-family:微软雅黑; font-size:medium;">
+北京
+</div>
+<div id="clock2" style="width:130px;height:130px;display:block;">
+<script src="http://www.clocklink.com/embed.js"></script><script type="text/javascript" language="JavaScript">obj=new Object;obj.clockfile="0023-orange.swf";obj.TimeZone="CET";obj.width=130;obj.height=130;obj.wmode="transparent";showClock(obj);</script></div>
+<div style="width:130px; height:20px;font-family:微软雅黑; font-size:medium;">
+柏林
+</div>
 </div>
 <script>
 </script>
